# translation_app_tauri

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
en/: 404.phtml  account_bugreport.phtml  account_download_assets.phtml  account_download_worldcreator.phtml  account_featurerequest.phtml  account_seats.phtml  buy.phtml  confirm.phtml  error.phtml  eula.phtml  features.phtml  features_new.phtml  gallery.phtml  illegal.phtml  imprint.phtml  index.phtml  login.phtml  logout.phtml  maintenance.phtml  news.phtml  privacy_policy.phtml  refund_policy.phtml
en/php/: footer.php  gdpr.php  menu-sub.php  menu.php
src/: ApiTextInput.jsx  App.css  App.jsx  ChooseOutput.jsx  Dropdown.css  MultiDropdown.css  MultiDropdown.jsx  TextInput.css  TextInput.jsx  dropdown.jsx  dropfield.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: csv_translate.rs  file_sys.rs  main.rs  phtml.rs  txt.rs
src-tauri/translated/de/: buy.phtml
src-tauri/translated/t1/zh/: index.phtml
src-tauri/translated/t2/zh/: index.phtml
src-tauri/translated/zh/: account_dashboard.phtml  footer.php  index.phtml
src-tauri/translated/zh/php/portal/: 404.phtml
translated/de/: 404.phtml  account_bugreport.phtml  account_dashboard.phtml  account_download_assets.phtml  account_download_bridge.phtml  account_download_worldcreator.phtml  account_featurerequest.phtml  account_seats.phtml  buy.phtml  confirm.phtml  error.phtml  eula.phtml  features.phtml  features_new.phtml  illegal.phtml  imprint.phtml  index.phtml  login.phtml  news.phtml  (+3 more)
(+41 files in other folders)
